--- a/.github/workflows/.java.yml
+++ b/.github/workflows/.java.yml
@@ -19,6 +19,7 @@ jobs:
           sudo apt update
           sudo apt-get install valgrind cmake default-jdk maven
           ./build.sh
-          cd bin && ./resql && cd ..
+          cd bin && ./resql &
+          cd ..
           cd clients/java
           mvn test
