--- a/.github/workflows/.go.yml
+++ b/.github/workflows/.go.yml
@@ -7,17 +7,20 @@ on:
       - master
 jobs:
   ubuntu:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Go client test
 
     steps:
       - uses: actions/checkout@v2.1.0
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.13.1'
       - name: build
         env:
           CC: ${{ matrix.compiler }}
         run: |
           sudo apt update
-          sudo apt-get install valgrind cmake golang
+          sudo apt-get install valgrind cmake
           ./build.sh
           cd bin
           ./resql &
