--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -6,7 +6,7 @@
 
 [node]
 node-name = node0
-bind-uri = tcp://node0@127.0.0.1:7600
+bind-uri = tcp://node0@127.0.0.1:7600 unix:///tmp/resql
 advertise-uri = tcp://node0@127.0.0.1:7600
 log-level = INFO
 log-destination = stdout
