--- a/.github/workflows/.c.yml
+++ b/.github/workflows/.c.yml
@@ -20,8 +20,11 @@ jobs:
         env:
           CC: ${{ matrix.compiler }}
         run: |
-          sudo apt update
-          sudo apt-get install valgrind cmake
+          ./build.sh
+          cd bin
+          ./resql &
+          cd ..
+          cd clients/c
           mkdir build && cd build
           cmake .. -DCMAKE_BUILD_TYPE=Debug
           make && make check
