accept configuration from command line

--- a/bin/resql.ini
+++ b/bin/resql.ini
@@ -5,9 +5,11 @@
 #inline comments starts with " #" (<space> and #),  or ";"
 
 [node]
-node-name = node0
-bind-uri = tcp://node0@0.0.0.0:7600 unix:///tmp/resql
-advertise-uri = tcp://node0@127.0.0.1:7600
+name = node0
+bind-url = tcp://node0@0.0.0.0:7600 unix:///tmp/resql
+advertise-url = tcp://node0@127.0.0.1:7600
+#source_addr = 127.0.0.1
+#source_port = 9000
 log-level = INFO
 log-destination = stdout
 directory = /tmp/storage/node0
@@ -15,4 +17,8 @@ in-memory = true
 
 [cluster]
 name = cluster
-node = tcp://node0@127.0.0.1:7600
+nodes = tcp://node0@127.0.0.1:7600
+
+[advanced]
+fsync = true
+heartbeat = 1000
