accept configuration from command line

--- a/bin/resql.ini
+++ b/bin/resql.ini
@@ -12,7 +12,7 @@ advertise-url = tcp://node0@127.0.0.1:7600
 #source_port = 9000
 log-level = INFO
 log-destination = stdout
-directory = /tmp/storage/node0
+directory = .
 in-memory = true
 
 [cluster]
