--- a/util/docker/debian/Dockerfile
+++ b/util/docker/debian/Dockerfile
@@ -4,11 +4,11 @@ RUN groupadd --system --gid 11211 resql && useradd --system --gid resql --uid 11
 
 ENV RESQL_VERSION master
 
-RUN set -x \
+RUN set -eux; \
 	\
-	&& savedAptMark="$(apt-mark showmanual)" \
-	&& apt-get update \
-	&& apt-get install -y --no-install-recommends \
+	savedAptMark="$(apt-mark showmanual)"; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends \
 		ca-certificates \
 		dpkg-dev \
 		gcc \
@@ -16,20 +16,21 @@ RUN set -x \
 		cmake \
 		make \
 		wget \
-	&& rm -rf /var/lib/apt/lists/* \
+	; \
+	rm -rf /var/lib/apt/lists/*; \
 	\
-	&& wget -O resql.tar.gz "https://github.com/tezc/resql/archive/$RESQL_VERSION.tar.gz" \
-	&& mkdir -p /usr/src/resql \
-	&& tar -xzf resql.tar.gz -C /usr/src/resql --strip-components=1 \
-	&& rm resql.tar.gz \
+	wget -O resql.tar.gz "https://github.com/tezc/resql/archive/$RESQL_VERSION.tar.gz"; \
+	mkdir -p /usr/src/resql; \
+	tar -xzf resql.tar.gz -C /usr/src/resql --strip-components=1; \
+	rm resql.tar.gz; \
 	\
-	&& cd /usr/src/resql \
-	&& ./build.sh \
-	&& ./build.sh --install \
+	cd /usr/src/resql; \
+	./build.sh; \
+	./build.sh --install; \
 	\
-	&& cd / && rm -rf /usr/src/resql \
+	cd / && rm -rf /usr/src/resql; \
 	\
-	apt-mark auto '.*' > /dev/null \
+	apt-mark auto '.*' > /dev/null; \
 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; \
 	find /usr/local -type f -executable -exec ldd '{}' ';' \
 		| awk '/=>/ { print $(NF-1) }' \
@@ -38,7 +39,8 @@ RUN set -x \
 		| cut -d: -f1 \
 		| sort -u \
 		| xargs -r apt-mark manual \
-	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+	; \
+	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
 	\
 	resql --version
 
