--- a/util/cli/CMakeLists.txt
+++ b/util/cli/CMakeLists.txt
@@ -6,8 +6,8 @@ add_executable(resql-cli
         sc_option.c
         linenoise.h
         linenoise.c
-        resql.h
-        resql.c
+        ${CMAKE_SOURCE_DIR}/c/resql.h
+        ${CMAKE_SOURCE_DIR}/c/resql.c
         )
 set_source_files_properties(
         linenoise.h
