--- a/util/daemon/resql.service
+++ b/util/daemon/resql.service
@@ -8,4 +8,4 @@ ExecStart=/usr/local/bin/resql -c=/etc/resql.ini --systemd
 Restart=always
 
 [Install]
-WantedBy=multi-user.targe
+WantedBy=multi-user.target
