--- a/.github/workflows/.maven.yml
+++ b/.github/workflows/.maven.yml
@@ -1,4 +1,4 @@
-name: docker-release
+name: maven-release
 
 on:
   workflow_dispatch:
@@ -13,25 +13,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11
+          java-package: jdk
 
       - name: Build with Maven
         run: |
           cd java
-          mvn -B package --file pom.xml
-
-      - name: Publish to GitHub Packages Apache Maven
-        run: mvn deploy
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+          mvn -B package -DskipTests --file pom.xml
 
       - name: Set up Apache Maven Central
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_CENTRAL_TOKEN
@@ -39,8 +35,10 @@ jobs:
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
       - name: Publish to Apache Maven Central
-        run: mvn deploy
+        run: |
+          cd java
+          mvn deploy --batch-mode -DskipTests --no-transfer-progress
         env:
-          MAVEN_USERNAME: maven_username123
+          MAVEN_USERNAME: tezc
           MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
