--- a/.github/workflows/.release.yml
+++ b/.github/workflows/.release.yml
@@ -3,17 +3,17 @@ name: release
 on:
   workflow_dispatch:
     inputs:
-      current-version:
-        description: 'current-version'
+      current:
+        description: 'current'
         required: true
-      release-version:
-        description: 'release-version'
+      release:
+        description: 'release'
         required: true
-      next-version:
-        description: 'next-version'
+      next:
+        description: 'next'
         required: true
 jobs:
-  docker-debian:
+  create-release-commit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,14 +25,111 @@ jobs:
           git config --global user.email tezc@users.noreply.github.com
           git config --global user.name
           git config --global user.email
-          git checkout -b ${{ github.event.inputs.release-version }}
-          (set -x; sed -i "s/${{ github.event.inputs.current-version }}/${{ github.event.inputs.release-version }}/g" c/resql.h)
-          (set -x; sed -i "s/${{ github.event.inputs.current-version }}/${{ github.event.inputs.release-version }}/g" go/client.go)
-          (set -x; sed -i "s/${{ github.event.inputs.current-version }}/${{ github.event.inputs.release-version }}/g" java/src/main/java/resql/Resql.java)
-          (set -x; sed -i "s/${{ github.event.inputs.current-version }}/${{ github.event.inputs.release-version }}/g" java/pom.xml)
-          (set -x; sed -i "s/${{ github.event.inputs.current-version }}/${{ github.event.inputs.release-version }}/g" src/rs.h)
-          (set -x; sed -i "s/${{ github.event.inputs.current-version }}/${{ github.event.inputs.release-version }}/g" util/cli/resql_cli.c)
-          (set -x; sed -i "s/${{ github.event.inputs.current-version }}/${{ github.event.inputs.release-version }}/g" util/docker/alpine/Dockerfile)
-          (set -x; sed -i "s/${{ github.event.inputs.current-version }}/${{ github.event.inputs.release-version }}/g" util/docker/debian/Dockerfile)
-          git commit -am "bump version to ${{ github.event.inputs.release-version }}"
-          git push origin ${{ github.event.inputs.release-version }}
+          (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" c/resql.h)
+          (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" go/client.go)
+          (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" java/src/main/java/resql/Resql.java)
+          (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" java/pom.xml)
+          (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" src/rs.h)
+          (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" util/cli/resql_cli.c)
+          (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" util/docker/alpine/Dockerfile)
+          (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" util/docker/debian/Dockerfile)
+          git commit -am "bump version to ${{ github.event.inputs.release }}"
+          git push origin master
+  release-maven:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+          java-package: jdk
+
+      - name: Build with Maven
+        run: |
+          cd java
+          mvn -B package -DskipTests --file pom.xml
+
+      - name: Set up Apache Maven Central
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_CENTRAL_TOKEN
+          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+
+      - name: Publish to Apache Maven Central
+        run: |
+          cd java
+          mvn deploy --batch-mode -DskipTests --no-transfer-progress
+        env:
+          MAVEN_USERNAME: tezc
+          MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+
+  release-docker-debian:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: util/docker/debian
+          platforms: linux/amd64,linux/arm64,
+          push: true
+          tags: tezc/resql:${{ github.event.inputs.release }}
+  release-docker-alpine:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: util/docker/alpine
+          platforms: linux/amd64,linux/arm64,
+          push: true
+          tags: tezc/resql:${{ github.event.inputs.release }}-alpine
+  update-next-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GIT_TOKEN }}
+      - name: Commit report
+        run: |
+          git config --global user.name tezc
+          git config --global user.email tezc@users.noreply.github.com
+          git config --global user.name
+          git config --global user.email
+          (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" c/resql.h)
+          (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" go/client.go)
+          (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" java/src/main/java/resql/Resql.java)
+          (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" java/pom.xml)
+          (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" src/rs.h)
+          (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" util/cli/resql_cli.c)
+          (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" util/docker/alpine/Dockerfile)
+          (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" util/docker/debian/Dockerfile)
+          git commit -am "bump version to ${{ github.event.inputs.next }}"
+          git push origin master
