--- a/.github/workflows/.release.yml
+++ b/.github/workflows/.release.yml
@@ -33,7 +33,7 @@ jobs:
           (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" util/cli/resql_cli.c)
           (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" util/docker/alpine/Dockerfile)
           (set -x; sed -i "s/${{ github.event.inputs.current }}/${{ github.event.inputs.release }}/g" util/docker/debian/Dockerfile)
-          git commit -am "bump version to v${{ github.event.inputs.release }}"
+          git commit -am "[skip-ci] bump version to v${{ github.event.inputs.release }}"
           git push origin master
           git tag v${{ github.event.inputs.release }}
           git push origin --tags
@@ -156,5 +156,5 @@ jobs:
           (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" util/cli/resql_cli.c)
           (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" util/docker/alpine/Dockerfile)
           (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" util/docker/debian/Dockerfile)
-          git commit -am "bump version to v${{ github.event.inputs.next }}"
+          git commit -am "[skip-ci] bump version to v${{ github.event.inputs.next }}"
           git push origin master
