--- a/util/docker/debian/Dockerfile
+++ b/util/docker/debian/Dockerfile
@@ -19,7 +19,7 @@ RUN set -eux; \
 	; \
 	rm -rf /var/lib/apt/lists/*; \
 	\
-	wget -O resql.tar.gz "https://github.com/tezc/resql/archive/$RESQL_VERSION.tar.gz"; \
+	wget -O resql.tar.gz "https://github.com/tezc/resql/archive/v$RESQL_VERSION.tar.gz"; \
 	mkdir -p /usr/src/resql; \
 	tar -xzf resql.tar.gz -C /usr/src/resql --strip-components=1; \
 	rm resql.tar.gz; \
