--- a/.github/workflows/.release.yml
+++ b/.github/workflows/.release.yml
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.13.1'
-      - run: GOPROXY=https://proxy.golang.org GO111MODULE=on go get github.com/tezc/resql/go/@v${{ github.event.inputs.release }}
+      - run: GOPROXY=https://proxy.golang.org GO111MODULE=on go get github.com/tezc/resql/go/resql@v${{ github.event.inputs.release }}
 
   release-docker-debian:
     needs: create-release-commit
@@ -140,7 +140,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: v${{ github.event.inputs.release }}
           token: ${{ secrets.GIT_TOKEN }}
       - name: Commit report
         run: |
@@ -148,6 +147,7 @@ jobs:
           git config --global user.email tezc@users.noreply.github.com
           git config --global user.name
           git config --global user.email
+          git pull
           (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" c/resql.h)
           (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" go/client.go)
           (set -x; sed -i "s/${{ github.event.inputs.release }}/${{ github.event.inputs.next }}/g" java/src/main/java/resql/Resql.java)
