[skip-ci] bump version to v0.0.9-latest

--- a/util/docker/alpine/Dockerfile
+++ b/util/docker/alpine/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.13
 
 RUN addgroup -g 11211 resql && adduser -D -u 11211 -G resql resql
 
-ENV RESQL_VERSION 0.0.8
+ENV RESQL_VERSION 0.0.9-latest
 
 RUN set -x \
 	\
@@ -45,4 +45,4 @@ ENTRYPOINT ["docker-entrypoint.sh"]
 
 USER resql
 EXPOSE 7600
-CMD ["resql", "--node-bind-url=tcp://0.0.0.0.8600"]
+CMD ["resql", "--node-bind-url=tcp://0.0.0.0.9-latest600"]
