--- a/.github/workflows/.release.yml
+++ b/.github/workflows/.release.yml
@@ -83,7 +83,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.13.1'
-      - run: GOPROXY=https://proxy.golang.org GO111MODULE=on go get github.com/tezc/resql/go/resql@v{{ github.event.inputs.release }}
+      - run: GOPROXY=https://proxy.golang.org GO111MODULE=on go get github.com/tezc/resql/go/resql@v${{ github.event.inputs.release }}
 
   release-docker-debian:
     needs: create-release-commit
