--- a/.github/workflows/.release.yml
+++ b/.github/workflows/.release.yml
@@ -36,7 +36,7 @@ jobs:
           git commit -am "[skip ci] bump version to v${{ github.event.inputs.release }}"
           git push origin master
           git tag v${{ github.event.inputs.release }}
-          git tag go/resql/v${{ github.event.inputs.release }}
+          git tag goresql/v${{ github.event.inputs.release }}
           git push origin --tags
 
   release-maven:
@@ -83,7 +83,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.13.1'
-      - run: GOPROXY=https://proxy.golang.org GO111MODULE=on go get github.com/tezc/resql/go/resql@v${{ github.event.inputs.release }}
+      - run: GOPROXY=https://proxy.golang.org GO111MODULE=on go get github.com/tezc/resql/goresql@v${{ github.event.inputs.release }}
 
   release-docker-debian:
     needs: create-release-commit
