--- a/util/docker/debian/Dockerfile
+++ b/util/docker/debian/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:buster-slim
 
 RUN groupadd --system --gid 11211 resql && useradd --system --gid resql --uid 11211 resql
 
-ENV RESQL_VERSION 0.0.12
+ENV RESQL_VERSION 0.0.13-latest
 
 RUN set -eux; \
 	\
@@ -53,4 +53,4 @@ ENTRYPOINT ["docker-entrypoint.sh"]
 
 USER resql
 EXPOSE 7600
-CMD ["resql", "--node-bind-url=tcp://0.0.0.0.12600"]
+CMD ["resql", "--node-bind-url=tcp://0.0.0.0.13-latest600"]
