--- a/.github/workflows/.go.yml
+++ b/.github/workflows/.go.yml
@@ -23,5 +23,5 @@ jobs:
           cd bin
           ./resql &
           cd ..
-          cd goresql
+          cd goresql/resql
           go test . -count 1 -v
